# financial_tools

./: .env  .gitignore  Makefile  dev.py  doraemon.exe.spec  main.py  prompt.md  prompt.txt  pyproject.toml  readme.md  ui.py  ui.spec  测算表.xlsx  测试表.xlsx
notebook/: dev.ipynb  duckdb.ipynb  match_and_format_data.ipynb
source/: get_excel_cols.py  get_excel_stats.py  get_group_conditions.py  get_group_data.py  load_excel_to_table.py  match_and_format_data.py  reconcile_accounts.py  reconcile_lists.py
testdata/: test.xlsx  测算表.xlsx  测试表.xlsx
