[project]
name = "reconcile-accounts"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.1",
    "jupyter>=1.1.1",
    "networkx>=3.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyinstaller>=6.12.0",
    "rich>=13.9.4",
    "jupyter>=1.1.1",
    "pip>=25.0.1",
    "pyarrow>=19.0.1",
    "tqdm>=4.67.1",
]
